fixed overflow on page causing blank space on right side

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -3,6 +3,7 @@
     margin: 0;
     padding: 0;
     font-family: 'Roboto', sans-serif;
+    overflow: hidden;
 }
 
 
@@ -34,8 +35,15 @@ li {
     width: 100vw;
     /* Full width */
     z-index: 9999;
-    
+margin-right: 15px;
+}
 
+.navbar a:active {
+    color: #1F6ED9;
+}
+
+.navbar a:hover {
+    color: #1F6ED9;
 }
 
 .hamburger {
